--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.1.50'
     ext.support_version = '26.0.+'
     ext.anko_version = '0.10.0'
+    ext.retrofit_version = '2.3.0'
     repositories {
         jcenter()
     }
